--- a/packages/website/src/app/globals.css
+++ b/packages/website/src/app/globals.css
@@ -4,5 +4,9 @@
 
 html,
 body {
-  @apply min-h-screen;
+  @apply min-h-screen text-gray-600 selection:text-indigo-500 selection:bg-theme
+}
+
+.login-bg {
+  background-image: url(/image/login_bg.jpg);
 }
