bugfix:修复拖拽排序取消后位置不正确的bug

--- a/packages/website/app/globals.css
+++ b/packages/website/app/globals.css
@@ -8,8 +8,8 @@ body {
 }
 
 .bg-login {
-  background-image: url(/images/bg-login.png);
-  @apply bg-cover bg-theme-1;
+  background-image: url(/images/bg-login.jpg);
+  @apply bg-cover bg-top bg-theme-1;
 }
 
 *::-webkit-scrollbar {
