feat:修改ui，新增widget配置

--- a/packages/website/app/globals.css
+++ b/packages/website/app/globals.css
@@ -12,7 +12,7 @@ body {
   @apply bg-cover bg-top bg-theme-1;
 }
 
-.bg-login-grid {
+.bg-grid {
   background-image: url(/images/grid.svg);
 }
 *::-webkit-scrollbar {
