--- a/packages/website/app/globals.css
+++ b/packages/website/app/globals.css
@@ -8,7 +8,7 @@ body {
 }
 
 .bg-login {
-  background-image: url(/images/bg-login-old.jpg);
+  background-image: url(/images/bg-login.jpg);
   @apply bg-cover bg-top;
 }
 
