--- a/packages/website/app/globals.css
+++ b/packages/website/app/globals.css
@@ -15,6 +15,9 @@ body {
 .bg-grid {
   background-image: url(/images/grid.svg);
 }
+.bg-tailwind {
+  background-image: url(/images/bg-tailwind.jpg);
+}
 *::-webkit-scrollbar {
   @apply bg-gray-blue-50 w-1.5 rounded;
 }
